force-app/main/default/objects/TestQuestionAnswer__c/TestQuestionAnswer__c.object-meta.xml
<CustomObject>
    <label>Test Question Answer</label>
    <nameField>
        <label>Test Question Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Question Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>