force-app/main/default/objects/TestQuestionAnswer__c/fields/AnswerText__c.field-meta.xml
<CustomField>
    <fullName>AnswerText__c</fullName>
    <label>Answer Text</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>