force-app/main/default/objects/TestQuestionAnswer__c/fields/NumberPoints__c.field-meta.xml
<CustomField>
    <fullName>NumberPoints__c</fullName>
    <label>Number Points</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>