force-app/main/default/objects/TestQuestionAnswer__c/fields/TestQuestion__c.field-meta.xml
<CustomField>
    <fullName>TestQuestion__c</fullName>
    <label>Test Question</label>
    <referenceTo>TestQuestion__c</referenceTo>
    <relationshipLabel>Test Question Answers</relationshipLabel>
    <relationshipName>TestQuestionAnswers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>